<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:fancy="http://schemas.android.com/apk/res-auto"
    tools:context="com.example.system.hackathon.Views.activities.MainActivity"
    android:background="@color/background">

    <VideoView
        android:id="@+id/videoview_landing_video"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toTopOf="parent"
        app:layout_constraintEnd_toStartOf="parent"
        app:layout_constraintStart_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="parent" />

    <TextView
        android:id="@+id/login_word"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/log_in"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.15"
        android:textSize="25sp"
        android:textColor="@android:color/white"/>

    <EditText
        android:id="@+id/emailET"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/login_word"
        android:background="@android:color/white"
        android:hint="@string/username"
        android:textAlignment="center"
        android:layout_marginEnd="15dp"
        android:layout_marginStart="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.15"
        android:padding="8dp"
        android:inputType="text"/>

    <EditText
        android:id="@+id/passwordET"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/emailET"
        android:background="@android:color/white"
        android:hint="@string/password"
        android:textAlignment="center"
        android:layout_margin="15dp"
        android:padding="8dp"
        android:inputType="textPassword"/>

    <Spinner
        android:id="@+id/languageSpn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/passwordET"
        android:layout_marginEnd="15dp"
        android:layout_marginStart="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.2"/>

    <mehdi.sakout.fancybuttons.FancyButton
        android:id="@+id/signInBTN"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/languageSpn"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:textColor="@android:color/black"
        fancy:fb_radius="18dp"
        fancy:fb_defaultColor="@color/colorPrimary"
        app:layout_constraintBottom_toTopOf="@id/not_user"
        fancy:fb_text="@string/sign_in"/>

    <TextView
        android:id="@+id/not_user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/not_already_a_user"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintHorizontal_bias="0.4"
        android:textColor="@android:color/white"/>

    <TextView
        android:id="@+id/signUpTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/not_user"
        app:layout_constraintTop_toTopOf="@id/not_user"
        android:text="@string/sign_up"
        android:layout_marginStart="2dp"
        android:textStyle="bold"
        android:textColor="@android:color/white"/>




</android.support.constraint.ConstraintLayout>
