<?xml version="1.0" encoding="utf-8"?>
    <android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:fancy="http://schemas.android.com/apk/res-auto"
        tools:context="com.example.system.hackathon.Views.activities.MainActivity"
        android:background="@color/background">

    <VideoView
        android:id="@+id/landing_activity_videoview_landing_video"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toTopOf="parent"
        app:layout_constraintEnd_toStartOf="parent"
        app:layout_constraintStart_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="parent" />

        <TextView
            android:id="@+id/login_word"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_up"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.15"
            android:textSize="25sp"
            android:textColor="@android:color/white"/>

        <EditText
            android:id="@+id/signUp_UserNameET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/login_word"
            android:background="@android:color/white"
            android:hint="@string/username"
            android:textAlignment="center"
            android:layout_marginEnd="15dp"
            android:layout_marginStart="15dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.1"
            android:padding="8dp"/>

        <EditText
            android:id="@+id/emailET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/signUp_UserNameET"
            android:background="@android:color/white"
            android:hint="@string/email"
            android:textAlignment="center"
            android:layout_marginEnd="15dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="15dp"
            android:padding="8dp"/>

        <EditText
            android:id="@+id/signUp_PasswordET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/emailET"
            android:background="@android:color/white"
            android:hint="@string/password"
            android:textAlignment="center"
            android:layout_margin="15dp"
            android:padding="8dp"/>

        <Spinner
            android:id="@+id/signUp_LanguageSpn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/signUp_PasswordET"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.15"
            android:layout_marginEnd="15dp"
            android:layout_marginStart="15dp" />

        <mehdi.sakout.fancybuttons.FancyButton
            android:id="@+id/signUpBTN"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/signUp_PasswordET"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:textColor="@android:color/black"
            fancy:fb_radius="18dp"
            fancy:fb_defaultColor="@color/colorPrimary"
            app:layout_constraintBottom_toBottomOf="parent"
            fancy:fb_text="@string/sign_up"/>

    </android.support.constraint.ConstraintLayout>
